--- a/jobs/prepare-repos-groovy/Jenkinsfile
+++ b/jobs/prepare-repos-groovy/Jenkinsfile
@@ -16,7 +16,7 @@ properties(
                     name: 'TARGET_NODE',
                     description: 'Jenkins agent node',
                     $class: 'hudson.model.StringParameterDefinition',
-                    defaultValue: 'openshift-build-1'
+                    defaultValue: 'container'
                 ],
                 [
                     name: 'GITHUB_BASE',
