--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -55,7 +55,7 @@ def get_changelog(rpm_name, record_log) {
     try {
         m = b.getText() =~ /buildID=(\d+)/
         build_id = m[0][1]
-    } except (err) {
+    } catch (err) {
         error "looking up build id from ${task_url}"
     }
 
@@ -69,7 +69,7 @@ def get_changelog(rpm_name, record_log) {
                 "sed -n '/Changelog:/,\$p'"
             ].join(" | ")
         )
-    } except (err) {
+    } catch (err) {
         error "failed to get build info and changelog for build ${build_id}"
     }
 }
