--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -61,7 +61,7 @@ def get_changelog(rpm_name, record_log) {
 
     // buildinfo can return the changelog.  Return just the text after
     // the Changelog: line
-    try {
+//    try {
         return sh(
             returnStdout: true,
             script: [
@@ -69,9 +69,9 @@ def get_changelog(rpm_name, record_log) {
                 "sed -n '/Changelog:/,\$p'"
             ].join(" | ")
         )
-    } catch (err) {
-        error "failed to get build info and changelog for build ${build_id}"
-    }
+//    } catch (err) {
+//        error "failed to get build info and changelog for build ${build_id}"
+//    }
 }
 
 def record_log = [
