usecurl not URL :-(

--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -52,8 +52,13 @@ def get_changelog(rpm_name, record_log) {
 
     // get the build ID from the web page
     // there must be an API way to do this MAL 20180622
+    task_page = sh(
+        returnStdout: true,
+        script: "curl --silent --insecure ${task_url} | grep buildID="
+    )
+
     try {
-        m = new URL(task_url).getText() =~ /buildID=(\d+)/
+        m = task_page =~ /buildID=(\d+)/
         build_id = m[0][1]
     } catch (err) {
         error "looking up build id from ${task_url}: ${err}"
