usecurl not URL :-(

--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -102,8 +102,7 @@ def record_log = [
 node(TARGET_NODE) {
 
     stage("test") {
-        changelog = get_changelog("openshift-ansible", record_log)
+        get_changelog("openshift-ansible", record_log)
         //echo changelog
     }
-    
 }
