--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -71,10 +71,11 @@ def get_changelog(rpm_name, record_log) {
     // the Changelog: line
     echo "retriving buildinfo for ${build_id}"
     try {
-        changelog = sh(
-            returnStdout: true,
-            script: "brew buildinfo ${build_id} --changelog"
-        ).trim()
+        changelog = "returned"
+        #changelog = sh(
+        #    returnStdout: true,
+        #    script: "brew buildinfo ${build_id} --changelog"
+        #).trim()
         echo "finised getting changelog"
     } catch (err) {
         error "failed to get build info and changelog for build ${build_id}"
