--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -72,10 +72,10 @@ def get_changelog(rpm_name, record_log) {
     echo "retriving buildinfo for ${build_id}"
     try {
         changelog = "returned"
-        #changelog = sh(
-        #    returnStdout: true,
-        #    script: "brew buildinfo ${build_id} --changelog"
-        #).trim()
+        //changelog = sh(
+        //    returnStdout: true,
+        //    script: "brew buildinfo ${build_id} --changelog"
+        //).trim()
         echo "finised getting changelog"
     } catch (err) {
         error "failed to get build info and changelog for build ${build_id}"
