--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -61,11 +61,10 @@ def get_changelog(rpm_name, record_log) {
     // the Changelog: line
     echo "retriving buildinfo for ${build_id}"
     try {
-        changelog = "returned"
-        //changelog = sh(
-        //    returnStdout: true,
-        //    script: "brew buildinfo ${build_id} --changelog"
-        //).trim()
+        changelog = sh(
+            returnStdout: true,
+            script: "brew buildinfo ${build_id} --changelog"
+        ).trim()
         echo "finised getting changelog"
     } catch (err) {
         error "failed to get build info and changelog for build ${build_id}"
@@ -96,7 +95,6 @@ node(TARGET_NODE) {
 
     stage("test") {
         get_changelog("openshift-ansible", record_log)
-        echo "Finished"
-        //echo changelog
+        echo changelog
     }
 }
