--- a/jobs/get-changelog/Jenkinsfile
+++ b/jobs/get-changelog/Jenkinsfile
@@ -63,7 +63,7 @@ def get_changelog(rpm_name, record_log) {
     try {
         changelog = sh(
             returnStdout: true,
-            script: "brew buildinfo ${build_id} --changelog"
+            script: "brew buildinfo ${build_id} --changelog | sed -n '/Changelog/,\$p'"
         ).trim()
         echo "finised getting changelog"
     } catch (err) {
