--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -64,7 +64,7 @@ node(TARGET_NODE) {
 
     sshagent([SSH_KEY_ID]) {
         stage("get release branches") {
-            branches = get_branches(oso_repo_url, "enterprise-*")
+            branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
         }
         
