--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -45,7 +45,7 @@ def get_branches(repo_url, pattern="") {
         script: [
             "git ls-remote ${repo_url} ${pattern}",
             "awk '{print \$2}'",
-            "cut -d\\ -f3"
+            "cut -d\\\ -f3"
         ].join(" | ")
     ).trim()
 
