--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -62,7 +62,7 @@ def get_single_file(owner, repo_name, file_name, repo_token) {
     query = "curl --silent -H '${auth_header}' -H '${accept_header}' -L ${file_url}"
     content = sh(
 	returnStdout: true,
-	script: ""
+	script: query
     )
 
     return content
