--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -55,7 +55,7 @@ def get_branches(repo_url, pattern="") {
 def get_single_file(owner, repo_name, file_name, repo_token) {
     // Get a single file from a Github repository.
 
-    auth_header = "Authorization: token: " + repo_token
+    auth_header = "Authorization: token " + repo_token
     file_url = "https://api.github.com/repos/${owner}/${repo_name}/contents/${file_name}"
     accept_header = "Accept: application/vnd.github.v3.raw"
 
