--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -84,14 +84,47 @@ def extract_rpm_version( spec_content ) {
     return ver_matcher[0][1]
 }
 
-// Matcher is not serializable; use NonCPS
-@NonCPS
-def extract_rpm_release_prefix(spec_content ) {
-    def rel_matcher = spec_content =~ /Release:\s*([.a-zA-Z0-9+-]+)/  // Do not match vars like %{?dist}
-    if ( ! rel_matcher ) { // Groovy treats matcher as boolean in this context
-        error( "Unable to extract Release field from RPM spec" )
+def cmp_version(v0, v1) {
+    // compare two version strings.
+    // return:
+    //   v0 < v1: -1
+    //   v0 > v1:  1
+    //   v0 = v1:  0
+
+    // split both into arrays on dots (.)
+    try {
+	a0 = v0.split('.').each { it as int }
+	a1 = v1.split('.').each { it as int }
+
+    } catch (convert_error) {
+	error("Invalid version strings: ${v0} or ${v1} - ${convert_error}")
     }
-    return rel_matcher[0][1]
+
+    // extend both to 3 fields with zeros if needed
+    while (a0.size() < 3) { a0 << 0 }
+    while (a1.size() < 3) { a1 << 0 }
+
+    // zip these two together for comparison
+    // major.minor.revision
+    mmr = [a0, a1].transpose()
+
+    // if any pair do not match, return the result
+    mmr.each {
+	if it[0] != it[1] {
+	    return it[0].compareTo(it[1])
+	}
+    }
+
+    // all pairs matched, the versions are equal
+    return 0
+}
+
+def eq_version(v0, v1) {
+    // determine if two versions are the same
+    // return:
+    //   v0 == v1: true
+    //   v0 != v1: false
+    return cmp_version(v0, v1) == 0
 }
 
 node(TARGET_NODE) {
@@ -118,9 +151,6 @@ node(TARGET_NODE) {
 	stage("extract version-release") {
 	    master_version = extract_rpm_version(spec_file)
 	    echo "Master version: ${master_version}"
-
-	    master_release = extract_rpm_release_prefix(spec_file)
-	    echo "Master release: ${master_release}"
 	}
 	
 	// get version and release
