--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -52,6 +52,13 @@ def get_branches(repo_url, pattern="") {
     return branch_text.split("\n")
 }
 
+@NonCPS
+def get_releases(repo_url) {
+    return get_branches(repo_url, "enterprise-*").each {
+        it = "/^enterprise-/"
+    }
+}
+
 def get_single_file(owner, repo_name, file_name, repo_token) {
     // Get a single file from a Github repository.
 
@@ -140,20 +147,22 @@ node(TARGET_NODE) {
         stage("get release branches") {
             branches = get_branches(ose_repo_url, "enterprise-*")
             echo "found branches: ${branches}"
+
+            versions = branches.each { it 
         }
 
-	stage("get master spec file") {
-	    spec_file = get_single_file("openshift", "ose", "origin.spec", github_auth_token)
-	    echo "Spec file size: ${spec_file.size()}"
-	}
+	      stage("get master spec file") {
+	          spec_file = get_single_file("openshift", "ose", "origin.spec", github_auth_token)
+	          echo "Spec file size: ${spec_file.size()}"
+	      }
 
-	stage("extract version-release") {
-	    master_version = extract_rpm_version(spec_file)
-	    echo "Master version: ${master_version}"
-	}
-
+	      stage("extract version-release") {
+	          master_version = extract_rpm_version(spec_file)
+	          echo "Master version: ${master_version}"
+	      }
+        
 	
-	// get version and release
+	      // get version and release
         //stage("checkout repo") {
         //    checkout_repo(
         //        ose_repo_url,
