--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -84,47 +84,47 @@ def extract_rpm_version( spec_content ) {
     return ver_matcher[0][1]
 }
 
-// def cmp_version(v0, v1) {
-//     // compare two version strings.
-//     // return:
-//     //   v0 < v1: -1
-//     //   v0 > v1:  1
-//     //   v0 = v1:  0
+def cmp_version(v0, v1) {
+    // compare two version strings.
+    // return:
+    //   v0 < v1: -1
+    //   v0 > v1:  1
+    //   v0 = v1:  0
 
-//     // split both into arrays on dots (.)
-//     try {
-// 	a0 = v0.split('.').each { it as int }
-// 	a1 = v1.split('.').each { it as int }
-//     } catch (convert_error) {
-// 	error("Invalid version strings: ${v0} or ${v1} - ${convert_error}")
-//     }
+    // split both into arrays on dots (.)
+    try {
+	a0 = v0.split('.').each { it as int }
+	a1 = v1.split('.').each { it as int }
+    } catch (convert_error) {
+	error("Invalid version strings: ${v0} or ${v1} - ${convert_error}")
+    }
 
-//     // extend both to 3 fields with zeros if needed
-//     while (a0.size() < 3) { a0 << 0 }
-//     while (a1.size() < 3) { a1 << 0 }
+    // extend both to 3 fields with zeros if needed
+    while (a0.size() < 3) { a0 << 0 }
+    while (a1.size() < 3) { a1 << 0 }
 
-//     // zip these two together for comparison
-//     // major.minor.revision
-//     mmr = [a0, a1].transpose()
+    // zip these two together for comparison
+    // major.minor.revision
+    mmr = [a0, a1].transpose()
 
-//     // if any pair do not match, return the result
-//     mmr.each {
-// 	if it[0] != it[1] {
-// 	    return it[0].compareTo(it[1])
-// 	}
-//     }
+    // if any pair do not match, return the result
+    mmr.each {
+	if (it[0] != it[1]) {
+	    it[0].compareTo(it[1])
+	}
+    }
 
-//     // all pairs matched, the versions are equal
-//     return 0
-// }
+    // all pairs matched, the versions are equal
+    return 0
+}
 
-// def eq_version(v0, v1) {
-//     // determine if two versions are the same
-//     // return:
-//     //   v0 == v1: true
-//     //   v0 != v1: false
-//     return cmp_version(v0, v1) == 0
-// }
+def eq_version(v0, v1) {
+    // determine if two versions are the same
+    // return:
+    //   v0 == v1: true
+    //   v0 != v1: false
+    return cmp_version(v0, v1) == 0
+}
 
 node(TARGET_NODE) {
 
