--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -53,8 +53,10 @@ def get_branches(repo_url, pattern="") {
 }
 
 def get_releases(repo_url) {
-    return get_branches(repo_url, "^enterprise-*").collect {
+    return get_branches(repo_url, "enterprise-*").collect {
         it - "enterprise-"
+    }.findAll {
+        it ~= /\d+((\.\d+)*)/
     }
 }
 
