--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -103,8 +103,8 @@ def cmp_version(v0, v1) {
 
     // split both into arrays on dots (.)
     try {
-        a0 = v0.split('.').each { it as int }
-        a1 = v1.split('.').each { it as int }
+        a0 = v0.split('.').collect { it as int }
+        a1 = v1.split('.').collect { it as int }
     } catch (convert_error) {
         error("Invalid version strings: ${v0} or ${v1} - ${convert_error}")
     }
