--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -49,7 +49,7 @@ def get_branches(repo_url, pattern="") {
         ].join(" | ")
     ).trim()
 
-    return String[] branch_text.split("\n")
+    return branch_text.split("\n")
 }
 
 def get_releases(repo_url) {
