--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -59,8 +59,13 @@ def get_releases(repo_url) {
         it =~ /^\d+((\.\d+)*)$/
     }
 
-    return r
-    //return r.sort { a, b -> cmp_version(a, b) }
+    echo "unsorted releases = ${r}"
+
+    s = r.sort{ a, b -> cmp_version(a, b) }
+
+    echo "sorted releases = ${s}"
+
+    return s
 }
 
 def get_single_file(owner, repo_name, file_name, repo_token) {
