--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -151,13 +151,15 @@ node(TARGET_NODE) {
     stage("test version sort") {
         String[] a = ['3.10', '2.9', '3.1', '3.5.1']
 
+
+        echo("comparing ${a[0]} to ${a[1]}: ${cmp_version(a[0], a[1])}")
         //println(" a = ${a}")
         //a.sort()
 
         b = a.sort{ x, y -> cmp_version(x, y) }
         
         echo(" a = ${a}")
-        echo (" b = ${b}")
+        echo(" b = ${b}")
 
     }
 
