--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -54,7 +54,7 @@ def get_branches(repo_url, pattern="") {
 
 def get_releases(repo_url) {
     String[] r = get_branches(repo_url, "enterprise-*").collect {
-        it - "enterprise-"
+        it.trim() - "enterprise-"
     }.findAll {
         it =~ /^\d+((\.\d+)*)$/
     }
