--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -52,6 +52,7 @@ def get_branches(repo_url, pattern="") {
     return branch_text.split("\n")
 }
 
+@NonCPS
 def get_releases(repo_url) {
     String[] r = get_branches(repo_url, "enterprise-*").collect {
         it.trim() - "enterprise-"
@@ -130,6 +131,7 @@ def cmp_version(String v0, String v1) {
     return 0
 }
 
+@NonCPS
 def eq_version(String v0, String v1) {
     // determine if two versions are the same
     // return:
@@ -157,7 +159,7 @@ node(TARGET_NODE) {
         //println(" a = ${a}")
         //a.sort()
 
-        b = a.sort{ x, y -> cmp_version(x, y) }
+        b = a.sort{ x,y -> cmp_version(x, y) }
         
         echo(" a = ${a}")
         echo(" b = ${b}")
