--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -61,7 +61,8 @@ def get_releases(repo_url) {
         it =~ /^\d+((\.\d+)*)$/
     }
 
-    s = r.sort{ a, b -> cmp_version(a, b) }
+    s = r
+    //s = r.sort{ a, b -> cmp_version(a, b) }
 
     echo "sorted releases = ${s}"
 
