--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -157,7 +157,7 @@ node(TARGET_NODE) {
         //println(" a = ${a}")
         //a.sort()
 
-        b = a.sort cmp_version
+        b = a.sort(cmp_version)
         
         echo(" a = ${a}")
         echo(" b = ${b}")
