--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -164,7 +164,7 @@ node(TARGET_NODE) {
 
         x = [3, 5, 1, 2, 7]
         echo(" x = ${x}")
-        y = x.sort(m, n -> m == n? 0: m > n ? 1 : 0)
+        y = x.sort{m, n -> m == n? 0: m > n ? 1 : 0}
 
         echo(" x = ${x}")
         echo(" y = ${y}")
