--- a/jobs/auto-mode/Jenkinsfile
+++ b/jobs/auto-mode/Jenkinsfile
@@ -138,6 +138,29 @@ def eq_version(String v0, String v1) {
     return cmp_version(v0, v1)
 }
 
+
+@NonCPS
+def test_sort() {
+ a = ['3.10', '2.9', '3.1', '3.5.1']
+
+
+        echo("comparing ${a[0]} to ${a[1]}: ${cmp_version(a[0], a[1])}")
+        //println(" a = ${a}")
+        //a.sort()
+
+        String[] b = a.sort{f0, f1 -> return cmp_version(f0, f1)}
+        
+        echo(" a = ${a}")
+        echo(" b = ${b}")
+
+        x = [3, 5, 1, 2, 7]
+        echo(" x = ${x}")
+        y = x.sort{ 0 }
+
+        echo(" x = ${x}")
+        echo(" y = ${y}")
+}
+
 node(TARGET_NODE) {
 
     ose_repo_url = "git@github.com:markllama/ose.git"
@@ -168,6 +191,10 @@ node(TARGET_NODE) {
 
         echo(" x = ${x}")
         echo(" y = ${y}")
+
+        echo "---- try again ----"
+
+        test_sort()
         
     }
 
